--- a/.fossa.yml
+++ b/.fossa.yml
@@ -7,6 +7,7 @@
 #
 # Usage: FOSSA_API_KEY=<> fossa analyze
 # -T <team-name> is not supported at this moment from fossa side.
+#test commit to check the git actions workflow
 version: 2
 cli:
   server: https://app.fossa.com
