--- a/.github/workflows/iosmcn-main.yml
+++ b/.github/workflows/iosmcn-main.yml
@@ -1,19 +1,20 @@
 # SPDX-License-Identifier: Apache-2.0
 # Copyright 2024 Canonical Ltd.
 
-name: Main workflow
+name: IOSMCN Main workflow
 
 on:
   pull_request:
     branches:
-      - main
+      - iosmcnmaster
   push:
     branches:
-      - main
+      - iosmcnmaster
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'ios-mcn-core'
     steps:
       - uses: actions/checkout@v4
 
@@ -26,6 +27,7 @@ jobs:
 
   unit-tests:
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'ios-mcn-core'
     steps:
       - uses: actions/checkout@v4
 
@@ -38,6 +40,7 @@ jobs:
   
   license-check:
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'ios-mcn-core'
     steps:
       - uses: actions/checkout@v4
 
@@ -46,6 +49,7 @@ jobs:
 
   fossa-check:
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'ios-mcn-core'
     steps:
       - uses: actions/checkout@v4
 
@@ -56,6 +60,7 @@ jobs:
   lint:
     name: lint
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'ios-mcn-core'
     steps:
       - uses: actions/checkout@v4
 
