--- a/.github/workflows/cdac-main.yml
+++ b/.github/workflows/cdac-main.yml
@@ -13,6 +13,20 @@ on:
   workflow_dispatch:     
 
 jobs:
+  staticcheck:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+
+      - uses: WillAbides/setup-go-faster@v1.14.0
+        with:
+          go-version-file: 'go.mod'
+
+      - uses: dominikh/staticcheck-action@v1.3.1
+        with:
+          version: latest
+          install-go: false
+
   build:
     runs-on: ubuntu-latest
     if: github.repository_owner == '5GC-DEV'
@@ -46,7 +60,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: reuse lint
-        uses: fsfe/reuse-action@v3
+        uses: fsfe/reuse-action@v4
 
   fossa-check:
     runs-on: ubuntu-latest
@@ -70,7 +84,7 @@ jobs:
           go-version-file: 'go.mod'
 
       - name: golangci-lint
-        uses: golangci/golangci-lint-action@v4.0.0
+        uses: golangci/golangci-lint-action@v6.1.0
         with:
           version: latest
           args: -v --config ./.golangci.yml
